# rust-release-train

./: README.md  justfile
versions/v1.72/: Cargo.toml
versions/v1.72/examples/cfg-disabled-in-errors/: Cargo.toml
versions/v1.72/examples/cmp_nan/: Cargo.toml
versions/v1.72/examples/const-limits/: Cargo.toml
versions/v1.72/examples/ref-to-mut/: Cargo.toml
versions/v1.72/examples/rustc-o/: Cargo.toml  README.md
versions/v1.72/examples/undropped-manually-drops/: Cargo.toml
versions/v1.72/examples/utf8-literal/: Cargo.toml
versions/v1.73/: Cargo.toml
versions/v1.73/examples/arc-file/: Cargo.toml
versions/v1.73/examples/new-panic/: Cargo.toml
versions/v1.73/examples/new_panic_assert/: Cargo.toml
versions/v1.73/examples/noop-method-call/: Cargo.toml
versions/v1.73/examples/thread-local-init/: Cargo.toml
versions/v1.74/: Cargo.toml
versions/v1.74/examples/char-to-u16/: Cargo.toml
versions/v1.74/examples/error-other/: Cargo.toml
versions/v1.74/examples/impl_trait_projections/: Cargo.toml
versions/v1.74/examples/into-vec/: Cargo.toml
versions/v1.74/examples/lint-configuration-bevy/: Cargo.toml
versions/v1.74/examples/lint-configuration-bevy/src/: main.rs
versions/v1.74/examples/redirect-stdout/: Cargo.toml
versions/v1.74/examples/saturating_numbers/: Cargo.toml
versions/v1.75/: Cargo.toml
versions/v1.75/examples/filetimes/: Cargo.toml
versions/v1.75/examples/impl-trait-in-trait/: Cargo.toml
versions/v1.75/examples/impl-trait-in-trait-async/: Cargo.toml
versions/v1.75/examples/option-slice/: Cargo.toml
(+26 files in other folders)
