[package]
name = "lint-configuration-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"

# [lints.rust]
# unsafe_code = "forbid"

# [lints.clippy]
# type_complexity = "allow"
# too_many_arguments = "allow"

# [lints]
# workspace = true
